--- a/ootd.html
+++ b/ootd.html
@@ -30,7 +30,7 @@
                           tergolong style yang unik dan sangat hypebeast. Yap, Sohwa Halilintar, anak 2 dari gen halilintar ini punya cara tersendiri dalam berpakaian. Sohwa sering mengenakan hijab produknya dengan model yang simpel, style baju bercorak dan celana corak jarang yang menarik. Stylenya juga sangat berbeda dibanding artis hijabers lainnya. dia lebih suka memadukan corak dan warna yang pastel dalam fashionnya.
                     </p>
                 </div>
-                <div class="container foto">
+                <div class="container h1">
                         <img src="images/sohwa.jpg"height="189">
                     </div>
                 <br>
@@ -44,7 +44,7 @@
 
                     </p>
                 
-                <div class="container foto">
+                <div class="container h1">
                         <img src="images/ricis.jpg"height="189">
                     </div>
                 <br>
@@ -57,7 +57,7 @@
                         Yang terakhir ada Zaskya adya mecca, artis yang satu ini kurang lebih memiliki style yang sama dengan ria ricis, tetapi Zaskya lebih sering menggunakan atas bawahan pada fashionnya. Hijab yang dikenakan adalah jenis pashmina, namun Zaskya juga sering memadukan kreasi hijab pashmina dengan hijab segiempat. Sehingga style zaskya ini juga bisa ditiru oleh kalian yang memiliki style fashion yang banyak. 
 
                 </p>
-                 <div class="container foto">
+                 <div class="container h1">
                 <img src="images/zaskia 1.jpg"height="189">
                     </div>
             
